--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,3 @@
-#vars:
-#  google-service-account: ${GOOGLE_APPLICATION_CREDENTIALS_BASE64:}
-#
-#spring:
-#  cloud:
-#    gcp:
-#      credentials:
-#        encoded-key: ${vars.google-service-account}
+vars:
+  gcs-application-bucket: ${GCS_APPLICATION_BUCKET:}
+
