Added support for MP3, handler for file upload, combined into one step only

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,9 @@
 vars:
   gcs-application-bucket: ${GCS_APPLICATION_BUCKET:}
 
+spring:
+  servlet:
+    multipart:
+      max-file-size: 1GB
+      max-request-size: 1GB
+
